--- a/index.html
+++ b/index.html
@@ -78,10 +78,6 @@
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
 
-                            <a href="" class="home__social-icon" target="_blank">
-                                <i class="uil uil-dribbble"></i>
-                            </a>
-
                             <a href="https://github.com/mobahug" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
                             </a>
@@ -130,7 +126,7 @@
                 <h2 class="section__title">About Me</h2>
                 <span class="section__subtitle">My introduction</span>
                 <div class="about__container container grid">
-                    <img src="assets/img/about.jpg" alt="" class="about__img">
+                    <img src="assets/img/website_image.png" alt="" class="about__img" >
 
                     <div class="about__data">
                         <p class="about__description">
@@ -683,7 +679,7 @@
                             </a>
                         </div>
 
-                        <img src="assets/img/image_website2.png" alt="" class="project__img">
+                        <img src="assets/img/image_website22.png" alt="" class="project__img">
                     </div>
                 </div>
             </section>
@@ -808,7 +804,7 @@
                         </div>
                     </div>
 
-                    <form action="" class="contact__form grid">
+<!--                     <form action="" class="contact__form grid">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
@@ -834,6 +830,12 @@
                                 <i class="uil uil-message button__icon"></i>
                             </a>
                         </div>
+                    </form> -->
+                    <form class="contact__form grid" action="mailto:gaborulenius@gmail.com">
+                        <a class=" button--flex" >
+                            <input class=" button contact__email" type="submit" name="submit" value="Send Message">
+                            <i class="uil uil-message button__icon white"></i>
+                        </a>
                     </form>
                 </div>
             </section>
@@ -844,7 +846,7 @@
             <div class="footer__bg">
                 <div class="footer__container container grid">
                     <div>
-                        <h1 class="footer__title">Gabor</h1>
+                        <h1 class="footer__title">Gabor Ulenius</h1>
                         <span class="footer__subtitle">Software developer</span>
                     </div>
 
