--- a/index.html
+++ b/index.html
@@ -605,14 +605,14 @@
                     <div class="swiper-wrapper">
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/project_image_01.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Modern Website</h3>
                                 <p class="portfolio__description">
                                     Website adabtable to all devices, with ui components and animated interactions.
                                 </p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
+                                <a href="https://mangofruit.fi/" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
