updated project images. descriptions

--- a/index.html
+++ b/index.html
@@ -608,9 +608,9 @@
                             <img src="assets/img/project_image_01.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Modern Website</h3>
+                                <h3 class="portfolio__title">Instagram clone - Mangofruit</h3>
                                 <p class="portfolio__description">
-                                    Website adabtable to all devices, with ui components and animated interactions.
+                                    Social media platform, adabtable to all devices, with ui components.
                                 </p>
                                 <a href="https://mangofruit.fi/" class="button button--flex button--small portfolio__button">
                                     Demo
@@ -621,14 +621,14 @@
 
                         <!--==================== PORTFOLIO 2 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/project_image_02.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Brand Design</h3>
                                 <p class="portfolio__description">
-                                    Website adabtable to all devices, with ui components and animated interactions.
+                                    Re-creation of the Santorini boardgame with 2 player, rules and cards.
                                 </p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
+                                <a href="https://mobahug.github.io/Santoriini_42/" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -637,15 +637,15 @@
 
                         <!--==================== PORTFOLIO 3 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/project_image_03.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Online Store</h3>
                                 <p class="portfolio__description">
-                                    Website adabtable to all devices, with ui components and animated interactions.
+                                    Space optimization algorithm using bitwise logic to squeeze the most tetris element into a certain space.
                                 </p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
-                                    Demo
+                                <a href="https://github.com/mobahug/Fillit_42" class="button button--flex button--small portfolio__button">
+                                    DOCS
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
                             </div>
