--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
                         </p>
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">08+</span>
+                                <span class="about__info-title">01+</span>
                                 <span class="about__info-name">Years <br> experience</span>
                             </div>
 
                             <div>
-                                <span class="about__info-title">20+</span>
+                                <span class="about__info-title">17+</span>
                                 <span class="about__info-name">Completed <br> project</span>
                             </div>
 
@@ -172,7 +172,7 @@
 
                                 <div>
                                     <h1 class="skills__titles">Frontend developer</h1>
-                                    <span class="skills__subtitle">More than 4 years</span>
+                                    <span class="skills__subtitle"><!-- More than 4 years --></span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrow"></i>
@@ -191,7 +191,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">CSS</h3>
-                                        <span class="skills__number">80%</span>
+                                        <span class="skills__number">75%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__css"></span>
@@ -211,7 +211,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">React</h3>
-                                        <span class="skills__number">85%</span>
+                                        <span class="skills__number">55%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__react"></span>
@@ -227,7 +227,7 @@
 
                                 <div>
                                     <h1 class="skills__titles">Backend developer</h1>
-                                    <span class="skills__subtitle">More than 2 years</span>
+                                    <span class="skills__subtitle"><!-- More than 2 years --></span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrow"></i>
@@ -253,7 +253,7 @@
                                     </div>
                                 </div>
 
-                                <div class="skills__data">
+                                <!-- <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Firebase</h3>
                                         <span class="skills__number">90%</span>
@@ -261,9 +261,9 @@
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__firebase"></span>
                                     </div>
-                                </div>
+                                </div> -->
 
-                                <div class="skills__data">
+                                <!-- <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Python</h3>
                                         <span class="skills__number">55%</span>
@@ -271,7 +271,7 @@
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__python"></span>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
 
                                 <div>
                                     <h1 class="skills__titles">Designer</h1>
-                                    <span class="skills__subtitle">More than 5 years</span>
+                                    <span class="skills__subtitle"><!-- More than 5 years --></span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrow"></i>
@@ -347,11 +347,11 @@
                             <!--==================== QUALIFICATION 1 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h2 class="qualification__title">Computer Enginner</h2>
-                                    <span class="qualification__subtitle">Peru - Univeristy</span>
+                                    <h2 class="qualification__title">Construction Technician</h2>
+                                    <span class="qualification__subtitle">Budapest - Technical Vocational & High School</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2009 - 2014
+                                        2011 - 2016
                                     </div>
                                 </div>
                                 <div>
@@ -370,11 +370,11 @@
                                 </div>
 
                                 <div>
-                                    <h2 class="qualification__title">Web Design</h2>
-                                    <span class="qualification__subtitle">Spain - Institute</span>
+                                    <h2 class="qualification__title">Finnish language A2</h2>
+                                    <span class="qualification__subtitle">Rauma - SataEdu</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2014 - 2017
+                                        2017 - 2018
                                     </div>
                                 </div>
                             </div>
@@ -382,26 +382,26 @@
                             <!--==================== QUALIFICATION 3 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h2 class="qualification__title">Web Development</h2>
-                                    <span class="qualification__subtitle">Peru - Institute</span>
+                                    <h2 class="qualification__title">Software Developer</h2>
+                                    <span class="qualification__subtitle">Helsinki - Hive Helsinki</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2017 - 2019
+                                        2021 - Present
                                     </div>
                                 </div>
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <span class="qualification__line"></span>
+                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
                             </div>
 
                             <!--==================== QUALIFICATION 4 ====================-->
-                            <div class="qualification__data">
+<!--                             <div class="qualification__data">
                                 <div></div>
 
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                   <!--  <span class="qualification__line"></span> -->
+                                    <span class="qualification__line"></span>
                                 </div>
 
                                 <div>
@@ -412,18 +412,18 @@
                                         2019 - 2021
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <!--==================== QUALIFICATION CONTENT 2 ====================-->
                         <div class="qualification__content" data-content id="work">
                             <!--==================== QUALIFICATION 1 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h2 class="qualification__title">Software Enginner</h2>
-                                    <span class="qualification__subtitle">Microsoft - Peru</span>
+                                    <h2 class="qualification__title">Dropshipping Store</h2>
+                                    <span class="qualification__subtitle">Espoo - Self-Employed</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2016 - 2018
+                                        2018 - 2019
                                     </div>
                                 </div>
                                 <div>
@@ -442,11 +442,11 @@
                                 </div>
 
                                 <div>
-                                    <h2 class="qualification__title">Frontend Developer</h2>
-                                    <span class="qualification__subtitle">Apple Inc - Spain</span>
+                                    <h2 class="qualification__title">House Keeper</h2>
+                                    <span class="qualification__subtitle">Espoo - Kotipalvelu ykköset</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2018 - 2020
+                                        2019 - 2020
                                     </div>
                                 </div>
                             </div>
@@ -454,11 +454,11 @@
                             <!--==================== QUALIFICATION 3 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h2 class="qualification__title">UI Designer</h2>
-                                    <span class="qualification__subtitle">Figma - Spain</span>
+                                    <h2 class="qualification__title">Scaffolder</h2>
+                                    <span class="qualification__subtitle">Espoo - Länsimetro</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2017 - 2019
+                                        2020 - 2021
                                     </div>
                                 </div>
                                 <div>
@@ -834,7 +834,7 @@
                     <form class="contact__form grid" action="mailto:gaborulenius@gmail.com">
                         <a class=" button--flex" >
                             <input class=" button contact__email" type="submit" name="submit" value="Send Message">
-                            <i class="uil uil-message button__icon white"></i>
+                            <!-- <i class="uil uil-message button__icon white"></i> -->
                         </a>
                     </form>
                 </div>
