--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Gabor Ulenius Portfolio Website</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -100,7 +100,7 @@
                             </svg>
                         </div>
                         <div class="home__data">
-                            <h1 class="home__title">Hi, I'am Gabor</h1>
+                            <h1 class="home__title">Hi, I am Gabor</h1>
                             <h3 class="home__subtitle">Fullstack developer</h3>
                             <p class="home__description">
                                 High level experience in web design and development
@@ -130,7 +130,7 @@
 
                     <div class="about__data">
                         <p class="about__description">
-                            Web developer, with extensive knowledge and years of experience,
+                            A passionate full-stack developer based in Espoo, with extensive knowledge,
                             working in web technologies and UI / UX design, delivering quality work.
                         </p>
                         <div class="about__info">
@@ -144,10 +144,10 @@
                                 <span class="about__info-name">Completed <br> project</span>
                             </div>
 
-                            <div>
+                            <!-- <div>
                                 <span class="about__info-title">05+</span>
                                 <span class="about__info-name">Companies <br> worked</span>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="about__buttons">
                             <a download="" href="assets/pdf/Future_CV_Here.pdf" class="button button--flex">
@@ -253,25 +253,25 @@
                                     </div>
                                 </div>
 
-                                <!-- <div class="skills__data">
+                                <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Firebase</h3>
-                                        <span class="skills__number">90%</span>
+                                        <h3 class="skills__name">MySQL</h3>
+                                        <span class="skills__number">80%</span>
                                     </div>
                                     <div class="skills__bar">
-                                        <span class="skills__percentage skills__firebase"></span>
+                                        <span class="skills__percentage skills__mysql"></span>
                                     </div>
-                                </div> -->
+                                </div>
 
-                                <!-- <div class="skills__data">
+                                <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Python</h3>
-                                        <span class="skills__number">55%</span>
+                                        <h3 class="skills__name">PostgreSQL</h3>
+                                        <span class="skills__number">65%</span>
                                     </div>
                                     <div class="skills__bar">
-                                        <span class="skills__percentage skills__python"></span>
+                                        <span class="skills__percentage skills__postgresql"></span>
                                     </div>
-                                </div> -->
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -282,7 +282,7 @@
                                 <i class="uil uil-swatchbook skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">Designer</h1>
+                                    <h1 class="skills__titles">Tools</h1>
                                     <span class="skills__subtitle"><!-- More than 5 years --></span>
                                 </div>
 
@@ -291,31 +291,71 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Figma</h3>
-                                        <span class="skills__number">90%</span>
+                                        <h3 class="skills__name">VScode/Vim/Nano</h3>
+                                        <span class="skills__number">95%</span>
                                     </div>
                                     <div class="skills__bar">
-                                        <span class="skills__percentage skills__figma"></span>
+                                        <span class="skills__percentage skills__vscode"></span>
                                     </div>
                                 </div>
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Sketch</h3>
-                                        <span class="skills__number">85%</span>
+                                        <h3 class="skills__name">Docker</h3>
+                                        <span class="skills__number">80%</span>
                                     </div>
                                     <div class="skills__bar">
-                                        <span class="skills__percentage skills__sketch"></span>
+                                        <span class="skills__percentage skills__docker"></span>
                                     </div>
                                 </div>
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">Photoshop</h3>
-                                        <span class="skills__number">85%</span>
+                                        <span class="skills__number">75%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__photoshop"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">GitHub & Git</h3>
+                                        <span class="skills__number">95%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__github"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">phpMyAdmin & pgAdmin</h3>
+                                        <span class="skills__number">85%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__phpmyadmin"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">MAMP</h3>
+                                        <span class="skills__number">95%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__mamp"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Asana</h3>
+                                        <span class="skills__number">95%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__asana"></span>
                                     </div>
                                 </div>
                             </div>
@@ -599,7 +639,7 @@
             <!--==================== PORTFOLIO ====================-->
             <section class="portfolio section" id="portfolio">
                 <h2 class="section__title">Portfolio</h2>
-                <span class="section__subtitle">Most recent work</span>
+                <span class="section__subtitle">Most recent works</span>
 
                 <div class="portfolio__container container swiper-container">
                     <div class="swiper-wrapper">
@@ -616,6 +656,10 @@
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
+                                <a href="https://github.com/mobahug/instagram_clone_42_SP" class="button button--flex button--small portfolio__button">
+                                    Docs
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
                             </div>
                         </div>
 
@@ -624,12 +668,16 @@
                             <img src="assets/img/project_image_02.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Brand Design</h3>
+                                <h3 class="portfolio__title">Browser Board Game</h3>
                                 <p class="portfolio__description">
                                     Re-creation of the Santorini boardgame with 2 player, rules and cards.
                                 </p>
                                 <a href="https://mobahug.github.io/Santoriini_42/" class="button button--flex button--small portfolio__button">
                                     Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                                <a href="https://github.com/mobahug/Santoriini_42" class="button button--flex button--small portfolio__button">
+                                    Docs
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
                             </div>
@@ -640,12 +688,12 @@
                             <img src="assets/img/project_image_03.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Online Store</h3>
+                                <h3 class="portfolio__title">Tetris Algorithm</h3>
                                 <p class="portfolio__description">
                                     Space optimization algorithm using bitwise logic to squeeze the most tetris element into a certain space.
                                 </p>
                                 <a href="https://github.com/mobahug/Fillit_42" class="button button--flex button--small portfolio__button">
-                                    DOCS
+                                    Docs
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
                             </div>
@@ -669,10 +717,12 @@
                 <div class="project__bg">
                     <div class="project__container container grid">
                         <div class="project__data">
-                            <h2 class="project__title">You have a new project</h2>
-                            <p class="project__description">
-                                Contact me now and get a 30% discount on your new project.
-                            </p>
+                            <h2 class="project__title">Awesome facts from me</h2>
+                            <p class="project__description"><br>
+                                I ran the marathon when I was 18 years old.<br><br>
+                                I built a full-size Iron Man costume from foam.<br><br>
+                                I built Titanic in Minecraft...on mobile phone.<br>
+                            </p><br>
                             <a href="#contact" class="button button--flex button--white">
                                 Contact Me
                                 <i class="uil uil-message project__icon button_icon"></i>
@@ -685,14 +735,14 @@
             </section>
 
             <!--==================== TESTIMONIAL ====================-->
-            <section class="testimonial section">
+            <!-- <section class="testimonial section">
                 <h2 class="section__title">Testimonial</h2>
                 <span class="section__subtitle">My client saying</span>
 
                 <div class="testimonial__container container swiper-container">
-                    <div class="swiper-wrapper">
+                    <div class="swiper-wrapper"> -->
                         <!--==================== TESTIMONIAL 1 ====================-->
-                        <div class="testimonial__content swiper-slide">
+                        <!-- <div class="testimonial__content swiper-slide">
                             <div class="testimonial__data">
                                 <div class="testimonial__header">
                                     <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
@@ -713,10 +763,10 @@
                                 I get a good impression, I carry out my project with all the possible quality
                                 and attention and support 24 hours a day.
                             </p>
-                        </div>
+                        </div> -->
 
                         <!--==================== TESTIMONIAL 2 ====================-->
-                        <div class="testimonial__content swiper-slide">
+                        <!-- <div class="testimonial__content swiper-slide">
                             <div class="testimonial__data">
                                 <div class="testimonial__header">
                                     <img src="assets/img/testimonial2.jpg" alt="" class="testimonial__img">
@@ -737,10 +787,10 @@
                                 I get a good impression, I carry out my project with all the possible quality
                                 and attention and support 24 hours a day.
                             </p>
-                        </div>
+                        </div> -->
 
                         <!--==================== TESTIMONIAL 3 ====================-->
-                        <div class="testimonial__content swiper-slide">
+                        <!-- <div class="testimonial__content swiper-slide">
                             <div class="testimonial__data">
                                 <div class="testimonial__header">
                                     <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__img">
@@ -762,12 +812,12 @@
                                 and attention and support 24 hours a day.
                             </p>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- Add Pagination -->
-                    <div class="swiper-pagination swiper-pagination-testimonial"></div>
+                    <!-- <div class="swiper-pagination swiper-pagination-testimonial"></div>
                 </div>
-            </section>
+            </section> -->
 
             <!--==================== CONTACT ME ====================-->
             <section class="contact section" id="contact">
@@ -780,7 +830,7 @@
                             <i class="uil uil-phone contact__icon"></i>
 
                             <div>
-                                <h3 class="contact__title">Call Me</h3>
+                                <h3 class="contact__title">Phone</h3>
                                 <span class="contact__subtitle">+35844-989-4822</span>
                             </div>
                         </div>
@@ -847,7 +897,7 @@
                 <div class="footer__container container grid">
                     <div>
                         <h1 class="footer__title">Gabor Ulenius</h1>
-                        <span class="footer__subtitle">Software developer</span>
+                        <span class="footer__subtitle">Fullstack developer</span>
                     </div>
 
                     <ul class="footer__links">
