--- a/index.html
+++ b/index.html
@@ -410,11 +410,11 @@
                                 </div>
 
                                 <div>
-                                    <h2 class="qualification__title">Finnish language A2</h2>
+                                    <h2 class="qualification__title">Finnish Language</h2>
                                     <span class="qualification__subtitle">Rauma - SataEdu</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2017 - 2018
+                                        2016 - 2017
                                     </div>
                                 </div>
                             </div>
@@ -513,15 +513,15 @@
 
             <!--==================== SERVICES ====================-->
             <section class="services section" id="services">
-                <h2 class="section__title">Services</h2>
-                <span class="section__subtitle">What I offer</span>
+                <h2 class="section__title">More</h2>
+                <span class="section__subtitle">From me</span>
 
                 <div class="services__container container grid">
                     <!--==================== SERVICES 1 ====================-->
                     <div class="services__content">
                         <div>
                             <i class="uil uil-web-grid services__icon"></i>
-                            <h3 class="services__title">UI/UX <br> Designer</h3>
+                            <h3 class="services__title">In my freetime <br> I like ...</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -531,26 +531,29 @@
 
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">UI/UX <br> Designer</h4>
+                                <h4 class="services__modal-title">In my freetime <br> I like</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I develop the user interface.</p>
+                                        <p>Discover the beautiful environment what surround us.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Web page development.</p>
+                                        <p>Craft and build things, like my Iron Man suit.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I create ux element interactions.</p>
+                                        <p>Do awesome and interesting miniprojects like
+                                            <a href="https://github.com/mobahug/MandelBulb_Fractal_SP" >MandelBulb</a>
+                                            .
+                                        </p>
                                     </li>
-                                    <li class="services__modal-service">
+                                    <!-- <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>I position your company brand.</p>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </div>
@@ -560,7 +563,7 @@
                     <div class="services__content">
                         <div>
                             <i class="uil uil-arrow services__icon"></i>
-                            <h3 class="services__title">Frontend <br> Developer</h3>
+                            <h3 class="services__title">I am ...</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -570,25 +573,25 @@
 
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Frontend <br> Developer</h4>
+                                <h4 class="services__modal-title">I am</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I develop the user interface.</p>
+                                        <p>A husband.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Web page development.</p>
+                                        <p>A father.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I create ux element interactions.</p>
+                                        <p>A developer.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I position your company brand.</p>
+                                        <p>An artist.</p>
                                     </li>
                                 </ul>
                             </div>
