--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </li>
                         <li class="nav__item">
                             <a href="#services" class="nav__link">
-                                <i class="uil uil-briefcase-alt nav__icon"></i> Services
+                                <i class="uil uil-briefcase-alt nav__icon"></i> More
                             </a>
                         </li>
                         <li class="nav__item">
@@ -103,7 +103,7 @@
                             <h1 class="home__title">Hi, I am Gabor</h1>
                             <h3 class="home__subtitle">Fullstack developer</h3>
                             <p class="home__description">
-                                High level experience in web design and development
+                                Substantial level of experience in web design and development
                                 knowledge, producing quality work.
                             </p>
                             <a href="#contact" class="button button--flex">
@@ -136,11 +136,11 @@
                         <div class="about__info">
                             <div>
                                 <span class="about__info-title">01+</span>
-                                <span class="about__info-name">Years <br> experience</span>
+                                <span class="about__info-name">Years <br> coding <br> experience</span>
                             </div>
 
                             <div>
-                                <span class="about__info-title">17+</span>
+                                <span class="about__info-title">20+</span>
                                 <span class="about__info-name">Completed <br> project</span>
                             </div>
 
@@ -410,7 +410,7 @@
                                 </div>
 
                                 <div>
-                                    <h2 class="qualification__title">Finnish Language</h2>
+                                    <h2 class="qualification__title">Finnish Language School</h2>
                                     <span class="qualification__subtitle">Rauma - SataEdu</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -546,7 +546,7 @@
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Do awesome and interesting miniprojects like
-                                            <a href="https://github.com/mobahug/MandelBulb_Fractal_SP" >MandelBulb</a>
+                                            <a class="button--link" href="https://github.com/mobahug/MandelBulb_Fractal_SP" >MandelBulb Fractol</a>
                                             .
                                         </p>
                                     </li>
@@ -562,7 +562,7 @@
                     <!--==================== SERVICES 2 ====================-->
                     <div class="services__content">
                         <div>
-                            <i class="uil uil-arrow services__icon"></i>
+                            <i class="uil uil-user services__icon"></i>
                             <h3 class="services__title">I am ...</h3>
                         </div>
 
@@ -601,8 +601,8 @@
                     <!--==================== SERVICES 3 ====================-->
                     <div class="services__content">
                         <div>
-                            <i class="uil uil-pen services__icon"></i>
-                            <h3 class="services__title">Branding <br> Designer</h3>
+                            <i class="uil uil-briefcase-alt services__icon"></i>
+                            <h3 class="services__title">In the work life<br> I am ...</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -612,25 +612,60 @@
 
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Branding <br> Designer</h4>
+                                <h4 class="services__modal-title">In the work life <br> I am</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I develop the user interface.</p>
+                                        <p>A teamplayer.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Web page development.</p>
+                                        <p>A real-life problem solver.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I create ux element interactions.</p>
+                                        <p>Creative.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>I position your company brand.</p>
+                                        <p>Communicative.</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--==================== SERVICES 4 ====================-->
+                    <div class="services__content">
+                        <div>
+                            <i class="uil uil-briefcase-alt services__icon"></i>
+                            <h3 class="services__title">Languages <br> ...</h3>
+                        </div>
+
+                        <span class="button button--flex button--small button--link services__button">
+                            View More
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </span>
+
+                        <div class="services__modal">
+                            <div class="services__modal-content">
+                                <h4 class="services__modal-title">Languages</h4>
+                                <i class="uil uil-times services__modal-close"></i>
+
+                                <ul class="services__modal-services grid">
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Hungarian - native</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>English - fluent.</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Finnish - basic.</p>
                                     </li>
                                 </ul>
                             </div>
@@ -724,12 +759,14 @@
                             <p class="project__description"><br>
                                 I ran the marathon when I was 18 years old.<br><br>
                                 I built a full-size Iron Man costume from foam.<br><br>
-                                I built Titanic in Minecraft...on mobile phone.<br>
+                                I participated in Hive Helsinki's very first Game Jam.<br><br>
+                                I built Titanic in Minecraft, on mobile phone.<br>
                             </p><br>
                             <a href="#contact" class="button button--flex button--white">
                                 Contact Me
                                 <i class="uil uil-message project__icon button_icon"></i>
                             </a>
+                            <br><br>
                         </div>
 
                         <img src="assets/img/image_website22.png" alt="" class="project__img">
@@ -905,7 +942,7 @@
 
                     <ul class="footer__links">
                         <li>
-                            <a href="#services" class="footer__link">Services</a>
+                            <a href="#services" class="footer__link">More</a>
                         </li>
                         <li>
                             <a href="#portfolio" class="footer__link">Portfolio</a>
