small fixes with icons

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                     <!--==================== SERVICES 1 ====================-->
                     <div class="services__content">
                         <div>
-                            <i class="uil uil-web-grid services__icon"></i>
+                            <i class="uil uil-trees services__icon"></i>
                             <h3 class="services__title">In my freetime <br> I like ...</h3>
                         </div>
 
@@ -640,7 +640,7 @@
                     <!--==================== SERVICES 4 ====================-->
                     <div class="services__content">
                         <div>
-                            <i class="uil uil-briefcase-alt services__icon"></i>
+                            <i class="uil uil-language services__icon"></i>
                             <h3 class="services__title">Languages <br> ...</h3>
                         </div>
 
