--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                     <div class="services__content">
                         <div>
                             <i class="uil uil-user services__icon"></i>
-                            <h3 class="services__title">I am ...</h3>
+                            <h3 class="services__title">In personal life <br> I am ...</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -573,7 +573,7 @@
 
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">I am</h4>
+                                <h4 class="services__modal-title">In personal life <br> I am</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
@@ -641,7 +641,7 @@
                     <div class="services__content">
                         <div>
                             <i class="uil uil-language services__icon"></i>
-                            <h3 class="services__title">Languages <br> ...</h3>
+                            <h3 class="services__title">Languages <br>I speak ...</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -651,7 +651,7 @@
 
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Languages</h4>
+                                <h4 class="services__modal-title">Languages I speak</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
