--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </li>
                         <li class="nav__item">
                             <a href="#contact" class="nav__link">
-                                <i class="uil uil-message nav__icon"></i> Contactme
+                                <i class="uil uil-message nav__icon"></i> Contact me
                             </a>
                         </li>
                     </ul>
@@ -948,7 +948,7 @@
                             <a href="#portfolio" class="footer__link">Portfolio</a>
                         </li>
                         <li>
-                            <a href="#contact" class="footer__link">Contactme</a>
+                            <a href="#contact" class="footer__link">Contact&nbsp;me</a>
                         </li>
                     </ul>
 
