--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <h1 class="home__title">Hi, I am Gabor</h1>
                             <h3 class="home__subtitle">Fullstack developer</h3>
                             <p class="home__description">
-                                Substantial level of experience in web design and development
+                                Vast level of experience in web design and development
                                 knowledge, producing quality work.
                             </p>
                             <a href="#contact" class="button button--flex">
