small fixes to perfect my portfolio

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                             <h1 class="home__title">Hi, I am Gabor</h1>
                             <h3 class="home__subtitle">Fullstack developer</h3>
                             <p class="home__description">
-                                Vast level of experience in web design and development
-                                knowledge, producing quality work.
+                                Vast level of knowledge in web design and development
+                                , producing quality work.
                             </p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me <i class="uil uil-message button__icon"></i>
@@ -135,7 +135,7 @@
                         </p>
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">01+</span>
+                                <span class="about__info-title">1+</span>
                                 <span class="about__info-name">Years <br> coding <br> experience</span>
                             </div>
 
@@ -677,7 +677,7 @@
             <!--==================== PORTFOLIO ====================-->
             <section class="portfolio section" id="portfolio">
                 <h2 class="section__title">Portfolio</h2>
-                <span class="section__subtitle">Most recent works</span>
+                <span class="section__subtitle">My proudest projects</span>
 
                 <div class="portfolio__container container swiper-container">
                     <div class="swiper-wrapper">
