--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Tetris Algorithm</h3>
                                 <p class="portfolio__description">
-                                    Space optimization algorithm using bitwise logic to squeeze the most tetris element into a certain space.
+                                    Space optimization algorithm using bitwise logic to squeeze the most tetris element into a certain area.
                                 </p>
                                 <a href="https://github.com/mobahug/Fillit_42" class="button button--flex button--small portfolio__button">
                                     Docs
