added new tools to tools section

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">phpMyAdmin & pgAdmin</h3>
+                                        <h3 class="skills__name">phpMyAdmin, pgAdmin, DataGrip</h3>
                                         <span class="skills__number">85%</span>
                                     </div>
                                     <div class="skills__bar">
