--- a/index.html
+++ b/index.html
@@ -351,6 +351,16 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
+                                        <h3 class="skills__name">Postman</h3>
+                                        <span class="skills__number">70%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__postman"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
                                         <h3 class="skills__name">Asana</h3>
                                         <span class="skills__number">95%</span>
                                     </div>
