added updated CV and new project, tools and stuff what learned

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             </div>
 
                             <div>
-                                <span class="about__info-title">20+</span>
+                                <span class="about__info-title">24+</span>
                                 <span class="about__info-name">Completed <br> project</span>
                             </div>
 
@@ -201,7 +201,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">JavaScript</h3>
-                                        <span class="skills__number">60%</span>
+                                        <span class="skills__number">90%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__js"></span>
@@ -211,7 +211,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">React</h3>
-                                        <span class="skills__number">55%</span>
+                                        <span class="skills__number">85%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__react"></span>
@@ -266,7 +266,7 @@
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <h3 class="skills__name">PostgreSQL</h3>
-                                        <span class="skills__number">65%</span>
+                                        <span class="skills__number">80%</span>
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__postgresql"></span>
@@ -361,7 +361,7 @@
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Asana</h3>
+                                        <h3 class="skills__name">Asana, Jira, Atlassian</h3>
                                         <span class="skills__number">95%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -386,6 +386,16 @@
                                     </div>
                                     <div class="skills__bar">
                                         <span class="skills__percentage skills__lucidchart"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">MUI, Bulma</h3>
+                                        <span class="skills__number">95%</span>
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__frameworks"></span>
                                     </div>
                                 </div>
                             </div>
@@ -733,6 +743,22 @@
 
                         <!--==================== PORTFOLIO 2 ====================-->
                         <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/project_image_04.png" alt="" class="portfolio__img_matcha">
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Tinder clone - Matcha</h3>
+                                <p class="portfolio__description">
+                                    Dating web application, using modern languages & tools, adabtable to all devices, with mui components.
+                                </p>
+                                <a href="https://github.com/mobahug/TinderClone_42" class="button button--flex button--small portfolio__button">
+                                    Docs
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== PORTFOLIO 3 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
                             <img src="assets/img/project_image_02.png" alt="" class="portfolio__img">
 
                             <div class="portfolio__data">
@@ -751,7 +777,7 @@
                             </div>
                         </div>
 
-                        <!--==================== PORTFOLIO 3 ====================-->
+                        <!--==================== PORTFOLIO 4 ====================-->
                         <div class="portfolio__content grid swiper-slide">
                             <img src="assets/img/project_image_03.png" alt="" class="portfolio__img">
 
